<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/navbar_chat"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/navbar_chat"
        android:title="@string/feed" />
    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/navbar_chat"
        android:title="@string/chat" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/navbar_chat"
        android:title="@string/setting" />
    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/navbar_chat"
        android:title="@string/about_app" />
</menu>