<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addInfoLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:theme="@style/Theme.MaterialComponents.Light"
    tools:context=".screens.AddPersonalInfoFragment">

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/personal_information"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayoutBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/short_biography">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etShortBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@color/main_view_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayoutBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@color/main_view_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayoutBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@color/main_view_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/spinnaker"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>